precompiles/utils/macro/tests/precompile/handle/set-missing.stderr
error: PrecompileSet methods must have at least 2 parameters (the precompile instance discriminant and the PrecompileHandle)
  --> tests/precompile/handle/set-missing.rs:22:2
   |
22 |     fn foo(_: u32) {
   |     ^^^^^^^^^^^^^^
